<resources>
    <string name="app_name">Perso Live Sample</string>
    <string name="voice">Voice</string>
    <string name="stop">Stop</string>
    <string name="send">Send</string>
    <string name="close">Close</string>
    <string name="analyzing">Analyzing</string>
    <string name="ai_speaking">AI Speaking</string>
    <string name="stop_speech">Stop speech</string>
    <string name="speaker_on">Speaker On</string>
    <string name="speaker_off">Speaker Off</string>
    <string name="authorize">Authorize</string>
    <string name="chat_log">Chat log</string>
</resources>