<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".PersoLiveActivity">

    <org.webrtc.SurfaceViewRenderer
        android:id="@+id/fullscreen_video_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintDimensionRatio="9:16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inputMethodContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/speakerOn"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:padding="0dp"
            android:text="@string/speaker_off"
            android:backgroundTintMode="add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/close"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:padding="0dp"
            android:text="@string/close"
            android:backgroundTintMode="add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/showChatLog"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="24dp"
            android:padding="0dp"
            android:backgroundTintMode="add"
            android:text="@string/chat_log"
            app:layout_constraintBottom_toTopOf="@id/voiceChat"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/chatState"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:padding="0dp"
            android:shadowColor="@color/black"
            android:shadowRadius="16"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/voiceChat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Chat state..." />

        <Button
            android:id="@+id/stopSpeech"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:padding="0dp"
            android:backgroundTintMode="add"
            android:text="@string/stop_speech"
            app:layout_constraintBottom_toTopOf="@id/voiceChat"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/message"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="12dp"
            android:autofillHints=""
            android:background="@android:color/white"
            android:inputType="text"
            android:maxLines="1"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="48dp"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/sendMessage"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/voiceChat"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="4dp"
            android:backgroundTintMode="add"
            android:padding="0dp"
            android:text="@string/voice"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/message"
            app:layout_constraintEnd_toEndOf="@id/message"
            app:layout_constraintTop_toTopOf="@id/message" />

        <Button
            android:id="@+id/sendMessage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="24dp"
            android:padding="0dp"
            android:text="@string/send"
            android:backgroundTintMode="add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chatLogContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        android:background="@color/chat_log_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/closeChatLog"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:padding="0dp"
            android:text="@string/close"
            android:backgroundTintMode="add"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chatLog"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="16dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/closeChatLog"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>